--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 * {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -33,11 +33,27 @@
 .nav__logo--text {
     font-size: 24px;
     font-weight: 900;
-    font-style: bold;
     color: #000000;
 }
 
-.nav__menu {
+li {
+    list-style: none;
+}
+
+.nav__links {
+    display: flex;
+    color: #000000;
+}
+
+.nav__link {
+    margin-right: 24px;
     text-decoration: none;
+    
+}
+
+.nav__link--login {
+    padding: 24px;
+    text-decoration: none;
+    color: #000000;
 }
 
