--- a/style.css
+++ b/style.css
@@ -16,18 +16,38 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 48px;
+    margin-bottom: 32px;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(36, 62, 99);
+    font-weight: bold;
+    font-size: 16px;
+    padding: 0 16px;
+}
+
+h1 {
+    font-size: 48px;
+    color: #1a202c;
+    line-height: 1.5;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.5;
 }
 
 .nav__logo {
     display: flex;
     align-items: center;
-    padding: 16px;
 }
 
 .nav__logo--img {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;;
+    width: 32px;
+    height: 32px;
+    margin-right: 10px;
 }
 
 .nav__logo--text {
@@ -42,18 +62,127 @@ li {
 
 .nav__links {
     display: flex;
-    color: #000000;
+    align-items: center;
 }
 
 .nav__link {
     margin-right: 24px;
     text-decoration: none;
-    
 }
 
 .nav__link--login {
     padding: 24px;
     text-decoration: none;
-    color: #000000;
+    color: rgb(36, 62, 99);
 }
 
+.nav__sign {
+    background-color: rgb(100, 21, 255);
+    color: #ffffff;
+    width: 80%;
+    padding: 12px 36px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: 700;
+    border: none;
+    transition: all 300ms;
+}
+
+.nav__sign:hover {
+    background-color: rgba(60,13,153);
+}
+
+.container {
+    padding: 96px 0;
+}
+
+header .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+}
+
+.header__description {
+    width: 40%;
+}
+
+.header__img {
+    width: 60%;
+}
+
+.customer__logos {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.purple {
+    color: rgb(100, 21, 255)
+}
+
+.header__logo {
+    width: 100%;
+}
+
+.header__description--p {
+    margin: 32px 0;
+}
+
+.header__email {
+    width: 100%;
+    min-width: 448px;
+    height: 68px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.header__email--input {
+    width: 100%;
+    border-radius: 500px;
+    border: 2px solid rgb(229, 231, 235);
+    padding: 20px 192px 20px 32px;
+    color: rgb(36, 62, 99);
+    font-size: 16px;
+    font-weight: 500;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    transition: border-color 300ms;
+}
+
+.header__customers {
+    margin-top: 80px;
+    color: #a0aec0;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 0.6px;
+}
+
+.btn__sign {
+    background-color: rgb(100, 21, 255);
+    color: #ffffff;
+    padding: 12px 36px;
+    border-radius: 500px;
+    text-decoration: none;
+    font-weight: 700;
+    border: none;
+    z-index: 2;
+    transition: all 300ms;
+    font-size: 16px;
+    margin: 8px;
+    height: calc(100% - 16px);
+    width: 160px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn__sign:hover {
+    background-color: rgba(60,13,153);
+}
+
+.customer__logos {
+    opacity: 0.5;
+}
