--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ li {
 .nav__sign {
     background-color: rgb(100, 21, 255);
     color: #ffffff;
-    width: 80%;
     padding: 12px 36px;
     border-radius: 50px;
     text-decoration: none;
@@ -93,7 +92,7 @@ li {
 }
 
 .container {
-    padding: 96px 0;
+    padding: 80px 0;
 }
 
 header .row {
@@ -185,4 +184,31 @@ header .row {
 
 .customer__logos {
     opacity: 0.5;
+}
+
+/* 
+
+FEATURES / SERVICES 
+
+*/
+
+.features__title {
+    
+}
+
+.feature {
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+main .service__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center
 }
