--- a/style.css
+++ b/style.css
@@ -89,6 +89,11 @@ li {
 
 .nav__sign:hover {
     background-color: rgba(60,13,153);
+    cursor: pointer;
+}
+
+.nav__sign:hover .sign__text {
+    opacity: 0.2;
 }
 
 .container {
@@ -152,6 +157,10 @@ header .row {
     transition: border-color 300ms;
 }
 
+.header__email--input:hover {
+    border-color: rgba(160,174,192);
+}
+
 .header__customers {
     margin-top: 80px;
     color: #a0aec0;
@@ -175,11 +184,11 @@ header .row {
     height: calc(100% - 16px);
     width: 160px;
     border: none;
-    cursor: pointer;
 }
 
 .btn__sign:hover {
     background-color: rgba(60,13,153);
+    cursor: pointer;
 }
 
 .customer__logos {
@@ -200,6 +209,7 @@ FEATURES / SERVICES
 .feature {
     font-size: 16px;
     font-weight: 700;
+    letter-spacing: 3px;
 }
 
 .feature__service {
@@ -212,18 +222,14 @@ FEATURES / SERVICES
     color: #7c8ba1;
     font-size: 18px;
     font-weight: 500;
+    text-align: center;
+    max-width: 500px;
 }
 
 .services {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-}
-
-main .service__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center
 }
 
 .service {
