--- a/style.css
+++ b/style.css
@@ -218,12 +218,13 @@ FEATURES / SERVICES
 }
 
 .features__para {
-    line-height: 1.625;
+    line-height: 2;
     color: #7c8ba1;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
-    max-width: 500px;
+    padding: 12px 300px;
+    margin-bottom: 32px;
 }
 
 .services {
@@ -268,4 +269,16 @@ FEATURES / SERVICES
     display: flex;
     padding: 32px 24px;
     align-items: flex-start;
+}
+
+/* 
+
+QUALITY WORK  
+
+*/
+
+main .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center
 }
