--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', system-ui;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -285,7 +285,7 @@ main .row--quality {
 
 .quality__work {
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 900;
     letter-spacing: 3px;
 }
 
@@ -295,4 +295,38 @@ main .row--quality {
 
 .quality__img--wrapper {
     width: 50%;
+}
+
+.quality__logo {
+    width: 100%;
+}
+
+.quality__para {
+    line-height: 1.5;
+    color: #7c8ba1;
+    margin-bottom: 16px;
+}
+
+.quality__title {
+    font-weight: 900;
+    font-size: 48px;
+    letter-spacing: 1.5px;
+    padding: 16px 48px 16px 0;
+    color: rgb(36, 62, 99);
+}
+
+.btn__learn {
+    background-color: rgb(100, 21, 255);
+    color: #ffffff;
+    padding: 8px;
+    border-radius: 500px;
+    text-decoration: none;
+    font-weight: 700;
+    border: none;
+    transition: all 300ms;
+    font-size: 16px;
+    margin: 8px;
+    height: calc(100% - 16px);
+    width: 160px;
+    border: none;
 }
