--- a/style.css
+++ b/style.css
@@ -438,7 +438,6 @@ main .row--values {
 .values__para {
     line-height: 1.5;
     color: #7c8ba1;
-    margin-bottom: 16px;
     padding: 32px 8px 8px 0;
     margin-bottom: 50px;
 }
@@ -489,4 +488,140 @@ main .row--values {
 
 .btn__value {
     margin-top: 48px;
+}
+
+/* 
+
+PRICING 
+
+*/
+
+.pricing__description {
+    width: 100%;
+    text-align: center;
+}
+
+.pricing__header{
+    font-weight: 900;
+    font-size: 48px;
+    letter-spacing: 1.5px;
+    color: rgb(36, 62, 99);
+    line-height: 1.5;
+    margin: 32px 0;
+}
+
+.pricing__para {
+    line-height: 1.5;
+    color: #7c8ba1;
+    margin-bottom: 64px;
+}
+
+.plans {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.plan {
+    display: flex;
+    width: calc(100% / 3);
+    flex-direction: column;
+    padding: 0 24px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    border-radius: 16px;
+}
+
+.plan2 {
+    background-color: rgb(76, 81, 191);
+}
+
+.plan__header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.plan__body {
+    text-align: center;
+    padding: 32px 0;
+    font-weight: 500;
+}
+
+.plan__footer {
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    text-align: center;
+    padding: 32px 0;
+}
+
+.plan__title1 {
+    color: #1a202c;
+    font-size: 20px;
+    font-weight: 700;
+    padding-top: 32px;
+}
+
+.plan__title2 {
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    padding-top: 32px;
+}
+
+.plan__price1 {
+    font-size: 48px;
+    font-weight: 700;
+    margin: 16px 0;
+}
+
+.plan__price2 {
+    font-size: 48px;
+    font-weight: 700;
+    margin: 16px 0;
+    color: white;
+}
+
+.plan__frecuency1 {
+    color: #a0aec0;
+    font-size: 16px;
+    font-weight: 500;
+    padding-bottom: 32px;
+}
+
+.plan__frecuency2 {
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    padding-bottom: 32px;
+}
+
+.plan__body--title1 {
+    font-weight: 500;
+    color: black;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.plan__body--title2 {
+    font-weight: 500;
+    color: white;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.plan__body--list1 {
+    margin-top: 20px;
+    color: #718096;
+}
+
+.plan__body--list2 {
+    margin-top: 20px;
+    color: white;
+}
+
+.pricing__list {
+    margin: 16px 0;
 }
