--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a {
     text-decoration: none;
     color: rgb(36, 62, 99);
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     padding: 0 16px;
 }
 
@@ -72,10 +72,29 @@ li {
     align-items: center;
 }
 
-.nav__link:hover {
+.nav__a {
+    position: relative;
+}
+
+.nav__a:hover {
     cursor: pointer;
     color: rgb(100, 21, 255);
-    text-decoration: underline;
+}
+
+.nav__a:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: rgb(100, 21, 255);
+    width: 0;
+    bottom: -5px;
+    right: 0;
+    transition: all 0.4s ease;
+}
+
+.nav__a:hover:after {
+    width: 100%;
+    left: 0;
 }
 
 .nav__link {
