--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
     color: rgb(36, 62, 99);
     font-weight: bold;
     font-size: 14px;
-    padding: 0 16px;
+    margin: 0 16px;
 }
 
 h1 {
@@ -718,4 +718,112 @@ PRICING
     cursor: pointer;
     transform: translate(1px, -1px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+/* 
+
+TESTIMONIALS 
+
+*/
+
+main .row--testimonial {
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+}
+
+.testimonial__logo {
+    width: 100%;
+}
+
+.testimonial__img--wrapper {
+    width: 50%;
+}
+
+.testimonial__description {
+    width: 50%;
+    padding-left: 48px;
+}
+
+.testimonial__header {
+    font-weight: 900;
+    font-size: 48px;
+    letter-spacing: 1.5px;
+    color: rgb(36, 62, 99);
+    line-height: 1.5;
+    padding-top: 16px;
+}
+
+.testimonial__para {
+    line-height: 1.5;
+    color: #7c8ba1;
+    margin-bottom: 48px;
+}
+
+.testimonial__footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.testimonial__profile {
+    display: flex;
+    
+}
+
+.testimonial__pic {
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    margin-right: 24px;
+}
+
+.testimonial__arrow--wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.testimonial__arrows {
+    width: 8px;
+    height: 8px;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #edf2f7;
+    margin: 0 12px;
+    transition: all 300ms;
+    align-items: center;
+    padding: 16px;
+}
+
+.testimonial__title {
+    font-weight: 700;
+    color: #243e63;
+    font-size: 20px;
+    line-height: 1.5;
+    margin-top: 16px
+}
+
+.testimonial__name {
+    font-weight: 700;
+    color: #243e63;
+    font-size: 20px;
+    line-height: 1.5;
+}
+
+.testimonial__section {
+    margin: 16px 0px 40px 0;
+    color: #4a5568;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.625;    
+}
+
+.testimonial__info {
+    text-align: center;
+}
+
+.testimonial__details {
+    color: #7c8ba1;
+    font-weight: 500;
+    line-height: 1.5;
 }
