--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     margin: 0 auto;
 }
 
+.container {
+    padding: 96px 0;
+}
+
 .nav {
     display: flex;
     justify-content: space-between;
@@ -767,7 +771,6 @@ main .row--testimonial {
 
 .testimonial__profile {
     display: flex;
-    
 }
 
 .testimonial__pic {
@@ -782,17 +785,21 @@ main .row--testimonial {
     align-items: center;
 }
 
-.testimonial__arrows {
-    width: 8px;
-    height: 8px;
+.testimonial__button {
     display: flex;
     justify-content: center;
-    border-radius: 50%;
-    background-color: #edf2f7;
-    margin: 0 12px;
-    transition: all 300ms;
     align-items: center;
     padding: 16px;
+    background-color: #edf2f7;
+    border-radius: 50%;
+    margin: 0 12px;
+    transition: all 300ms;
+    border: none;
+}
+
+.testimonial__arrow {
+    width: 16px;
+    height: 16px;
 }
 
 .testimonial__title {
@@ -820,10 +827,20 @@ main .row--testimonial {
 
 .testimonial__info {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .testimonial__details {
     color: #7c8ba1;
     font-weight: 500;
     line-height: 1.5;
+}
+
+.divider {
+    width: 1px;
+    height: 24px;
+    background-color: rgb(229, 231, 235);
 }
