--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     margin-bottom: 32px;
 }
 
-a {
+#header a {
     text-decoration: none;
     color: rgb(36, 62, 99);
     font-weight: bold;
@@ -839,7 +839,7 @@ main .row--testimonial {
     line-height: 1.5;
 }
 
-.divider {
+.arrow__divider {
     width: 1px;
     height: 24px;
     background-color: rgb(229, 231, 235);
@@ -912,6 +912,7 @@ START
 .start__button:nth-child(2) {
     border: 1px solid rgb(160, 174, 192);
     transition: all 300ms;
+    background-color: transparent;
 }
 
 .start__button:hover:nth-child(2) {
@@ -919,3 +920,49 @@ START
     color: rgba(100,21,255);
 }
 
+/* 
+
+FOOTER 
+
+*/
+
+.row--footer {
+    background-color: rgb(100, 21, 255);
+}
+
+.links {
+    display: flex;
+    justify-content: space-between;
+    color: #ffffff;
+}
+
+.link {
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+}
+
+.footer__link {
+    color: #ffffff;
+}
+
+.footer__divider {
+    color: rgb(44, 255, 62);
+    height: 1px;
+    width: 1000px;
+}
+
+.footer__logo {
+    display: flex;
+}
+
+.footer__img {
+    width: 32px;
+    height: 32px;
+    margin-right: 10px;
+}
+
+.footer__info {
+    display: flex;
+    justify-content: space-between;
+}
