--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ li {
     list-style: none;
 }
 
+.btn__menu {
+    display: none;
+}
+
 .nav__links {
     display: flex;
     align-items: center;
@@ -260,6 +264,10 @@ FEATURES / SERVICES
     text-align: center;
 }
 
+.features__row {
+    max-width: 1024px;
+}
+
 .feature__service {
     margin : 16px;
     line-height: 1.5;
@@ -340,6 +348,9 @@ main .row--quality {
 
 .quality__description {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .quality__img--wrapper {
@@ -781,6 +792,7 @@ main .row--testimonial {
     color: rgb(36, 62, 99);
     line-height: 1.5;
     padding-top: 16px;
+    margin-bottom: 24px;
 }
 
 .testimonial__para {
@@ -838,6 +850,12 @@ main .row--testimonial {
     font-size: 20px;
     line-height: 1.5;
     margin-top: 16px
+}
+
+.stars {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .testimonial__name {
@@ -1092,6 +1110,12 @@ SMALL PHONES, TABLETS, LARGE SMATPHONES
     .nav__links {
         display: none;
     }
+
+    .btn__menu {
+        display: block;
+        background-color: transparent;
+        border: none;
+    }
     
     .features {
         justify-content: center;
@@ -1104,11 +1128,49 @@ SMALL PHONES, TABLETS, LARGE SMATPHONES
 
     .features__para {
         font-size: 14px;
+        padding: 0;
+    }
+
+    .services {
+        max-width: 768px;
+        justify-content: center;
+    }
+
+    .service {
+        width: auto;
+        max-width: 384px;
+    }
+
+    .service__container {
+        padding: 32px 8px;
+        margin: 0 16px;
+    }
+
+    .service__para {
+        max-width: none;
     }
 
     #quality .row,
     #values .row {
         flex-direction: column-reverse;
+    }
+
+    .titles {
+        text-align: center;
+    }
+
+    .quality__title {
+        padding: 0;
+        font-size: 36px;
+        text-align: center;
+    }
+
+    .quality__para {
+        font-size: 14px;
+    }
+
+    .btn__learn {
+
     }
 
     .quality__para,
@@ -1138,6 +1200,10 @@ SMALL PHONES, TABLETS, LARGE SMATPHONES
         align-items: center;
     }
 
+    .steps__header {
+        font-size: 36px;
+    }
+
     .step {
         flex-direction: column;
         align-items: center;
@@ -1148,8 +1214,15 @@ SMALL PHONES, TABLETS, LARGE SMATPHONES
         margin-left: 0;
     }
 
+    .step__title--wrapper {
+        margin-top: 12px;
+        margin-left: 0;
+    }
+
     .values__list {
         margin: 0 auto;
+        flex-direction: column;
+        max-width: 320px;
     }
 
     .value:nth-of-type(1) {
@@ -1162,8 +1235,32 @@ SMALL PHONES, TABLETS, LARGE SMATPHONES
         align-items: center;
     }
 
+    .values__header {
+        font-size: 36px;
+    }
+
+    .values__para {
+        font-size: 14px;
+    }
+
+    .value__para {
+        font-size: 14px;
+    }
+
+    .value:nth-child(2) {
+        margin-top: 40px;
+    }
+
     .row—pricing {
         margin-top: 40px;
+    }
+
+    .pricing__header {
+        font-size: 36px;
+    }
+
+    .pricing__para {
+        font-size: 14px;
     }
 
     .plans {
@@ -1178,13 +1275,31 @@ SMALL PHONES, TABLETS, LARGE SMATPHONES
         width: 350px;
     }
 
+    .testimonial__title {
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    .testimonial__header {
+        font-size: 36px;
+    }
+
+    .testimonial__para {
+        font-size: 14px;
+    }
+
     .testimonial__description {
         padding-left: 0;
         width: 100%;
+        max-width: 448px;
+        text-align: center;
     }
 
     .testimonial__section {
-
+        text-align: center;
+        font-size: 14px;
+        max-width: 380px;
     }
 
     .footer__links {
